# cpp_project_building

./: README.md
Module_1/: addition.cpp  hello_word.cpp  main.cpp  makefile  print_result.cpp
Module_2/: CMakeLists.txt  hello_word.cpp  main.cpp  makefile
Module_2/my_build_dir/: CMakeCache.txt  Makefile  calculator  cmake_install.cmake
Module_3/: CMakeLists.txt  division.cpp  hello_word_2.cpp  main.cpp
Module_3/my_math_dir/: addition.cpp
Module_3/my_math_dir/src/: addition.cpp  division.cpp
Module_3/my_print_dir/include/: print_result.h
Module_3/my_print_dir/src/: print_result.cpp
